--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fake API com json-server",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db_email.json --port 10000"
+    "start": "json-server --watch db_email.json --host 0.0.0.0 --port 10000"
   },
   "dependencies": {
     "json-server": "^0.17.3"
